[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.cst]
codegen-units = 1
incremental = false

[profile.release.package.rvn]
codegen-units = 1
incremental = false

[profile.release.package.marketplace]
codegen-units = 1
incremental = false

[profile.release.package.rvn-base]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
