[package]
name = "rvn-token"
version = "0.1.0"
authors = [
    "Ethan Frey <ethanfrey@users.noreply.github.com>",
    "Kevin Nguyen <kevin.nguyen.ai@gmail.com>"
]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/roostervn/roostervn-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.4"
cw2 =  "0.13.4"
cw20 = "0.13.4" 
cw-storage-plus = "0.13.4"
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
